--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -25,7 +25,7 @@
                         <p:outputLabel value="Cidade"> </p:outputLabel>
                         <p:inputText value="#{cadastroBean.jovem.cidade}"> </p:inputText>
                         <p:outputLabel value="Data de Nascimento"> </p:outputLabel>
-                        <p:inputText value="#{cadastroBean.jovem.dnascimento}" ></p:inputText>
+                        <p:inputMask value="#{cadastroBean.jovem.dnascimento}" mask="99/99/9999" ></p:inputMask>
                     </p:panelGrid>
             </h:body>
             <p:dataTable value="#{cadastroBean.jovens}" var="jovem">
